# Coursework6_Django_Skymarket

./: pyproject.toml  utils.py
ads/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_advertisement_price_alter_comment_text.py
fixtures/: ad.json  comment.json
skymarket/: settings.py  urls.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ads_create_test.py  ads_list_test.py  ads_retrieve_test.py
tests/comments/: comments_create_test.py  comments_destroy_test.py  comments_retrieve_test.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
